# enid

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: base32.rs  enid.rs  lib.rs
